--- a/index.html
+++ b/index.html
@@ -22,13 +22,56 @@
 				<a href="#pricing" class="hover:text-myblue">Pricing</a>
 				<div class="space-x-1 items-center cursor-pointer hover:text-myblue">
 					<a href="">Resources</a>
-					<i class="ri-arrow-drop-down-fill text-myblue text-base"></i>
+					<i class="ri-arrow-drop-down-fill text-myblue"></i>
 				</div>
 				
-				<a href="" class="bg-myblue py-1 px-4 text-center text-white rounded-xl shadow-md hover:bg-blue-500">
+				<a href="" class="bg-myblue py-1 px-4 text-center text-white rounded-xl 
+					shadow-md hover:bg-blue-500 active:scale-95 transition duration-300 ease-in" >
 					Get Started
 				</a>
 			</div>
 		</nav>
+
+		<!---============= Main ============-->
+		<main id="main" class="relative">
+			<div class="flex flex-col mt-20 mx-10 justify-center items-center text-center space-y-5">
+				<h1 class="text-center text-3xl font-bold text-black">
+					Everything you need to grow your business
+				</h1>
+				<p class="text-sm text-gray-500">
+					protonn does everuthing you need to start and grow your business.
+					Attract clients through engaging video content and simplify your business operations.
+				</p>
+				<a href="#" class="bg-myblue py-2 px-6 text-center text-white rounded-xl 
+				shadow-md hover:bg-blue-500 active:scale-95 transition duration-300 ease-in">
+					Get Started With Protonn Today
+				</a>
+				<div class="flex space-x-5">
+					<div class="flex space-x-2 text-myblue">
+						<i class="ri-bank-card-fill"></i>
+						<p>
+							No Credit Card Needed.
+						</p>
+					</div>
+					<div class="flex space-x-2 text-myblue">
+						<i class="ri-rocket-2-fill rotate-45"></i>
+						<p>
+							Free 3-months trial.
+						</p>
+					</div>
+				</div>
+
+				<div class=" py-14 space-y-5 items-center">
+					<video controls  width="500" height="300" class="rounded-xl">
+					<source src="./video/Innova Digital Group - The Creative Ad Agency (Promo Video).mp4" type="video/mp4">
+					<source src="" type="">
+					Your browser does not support the video format
+					</video>
+					<p class="text-center text-myblue font-bold">
+						See Protonn in Action
+					</p>
+				</div>
+			</div>
+		</main>
 	</body>
 </html>
