--- a/index.html
+++ b/index.html
@@ -72,6 +72,41 @@
 					</p>
 				</div>
 			</div>
+
+			<div class="flex justify-between space-x-20 py-10">
+				<div class="flex bg-yellow-100 rounded-r-2xl w-1/2 ml-2 justify-center items-center">
+					<img src="./img/iphone-removebg-preview.png" alt="" class="">
+				</div>
+				
+				<div class="flex flex-col w-1/2 space-y-8 pr-14">
+					<h1 class="text-black text-3xl font-bold text-start">
+						Atract new clients through engaging video
+					</h1>
+					<p class="text-start text-gray-500 font-medium">
+						Use protonn's magic mode to create your own interactive video in
+						minutes.Edit with ease.Post it on social media in one click to attract
+						new clients.
+					</p>
+					<div class="flex space-x-12 pt-10">
+						<span class=" bg-yellow-400 h-full w-4"></span>
+						<div class="flex flex-col space-y-6">
+							<p class="text-start text-slate-400">
+							"Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+							Ab quidem facilis assumenda, laborum hic dignissimos nemo, 
+							dolorem ipsum necessitatibus molestiae dicta blanditiis, fuga expedita 
+							nulla laudantium voluptatibus porro quas aperiam."
+							</p>
+							<div class="flex space-x-5">
+								<img src="./img/avatar-richard.png" alt="">
+								<div class="flex flex-col justify-evenly">
+									<p class="text-black text-xl font-semibold">Wade Warren</p>
+									<p class="text-sm text-slate-500">President of sales</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 	</body>
 </html>
