--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 		<!---============= Main ============-->
 		<main id="main" class="relative">
-			<div class="flex flex-col mt-20 mx-10 justify-center items-center text-center space-y-5">
+			<section class="flex flex-col mt-20 mx-10 justify-center items-center text-center space-y-5">
 				<h1 class="text-center text-3xl font-bold text-black">
 					Everything you need to grow your business
 				</h1>
@@ -71,9 +71,9 @@
 						See Protonn in Action
 					</p>
 				</div>
-			</div>
+			</section>
 
-			<div class="flex justify-between space-x-20 py-10">
+			<section class="flex justify-between space-x-20 mt-20">
 				<div class="flex bg-yellow-100 rounded-r-2xl w-1/2 ml-2 justify-center items-center">
 					<img src="./img/iphone-removebg-preview.png" alt="" class="">
 				</div>
@@ -106,7 +106,34 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
+
+			<section class="flex space-x-20 pt-32">
+				<div class="flex items-center justify-center w-5/12">
+					<img src="./img/iphone-removebg-preview.png" alt="">
+				</div>
+
+				<div class="flex flex-col w-5/ space-y-3 pr-14">
+					<h1 class="text-black text-4xl font-bold text-start">
+						Thank you for choosing protonn premium
+					</h1>
+					<p class="text-start text-gray-500 font-medium">Enter your email id for the download link</p>
+					<div class="flex space-x-3 items-center pt-5">
+						<input type="" name="" placeholder="Enter your email..."
+							class="py-2 px-4 border-2 border-gray-400 rounded-lg focus:outline-none bg-white">
+						<a href="#" class="bg-myblue py-2 px-4 rounded-xl text-white hover:bg-blue-500">Send link</a>
+					</div>
+					<p class="text-start text-gray-400 text-sm">
+						By clicking "send link" you agree to our <a href="#" class="text-myblue underline underline-offset-4">
+						Terms of Service</a> and 
+						<a href="#" class="text-myblue underline underline-offset-4">Privacy Policy.</a>
+					</p>
+					<div class="flex space-x-5">
+						<a href="#"><img src="./img/download-on-the-app-store-apple-logo-svgrepo-com.svg" alt=""></a>
+						<a href="#"><img src="./img/google-play-badge-logo-svgrepo-com.svg" alt=""></a>
+					</div>
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
