--- a/index.html
+++ b/index.html
@@ -8,30 +8,49 @@
 		<title>Proton</title>
 	</head>
 	<body>
-		<nav class="relative flex justify-between mx-14 mt-7">
-			<div class="flex space-x-5 items-center">
-				<img src="./img/proton-logo-privacy-svgrepo-com.svg" alt="" class="">
-				<a href="#product" class="relative hover:text-myblue underline underline-offset-8">
-					Products
-				</a>
-					
-				<div class="space-x-1 items-center text-center cursor-pointer hover:text-myblue">
-					<a href="#use">Use Cases</a>
-					<i class="ri-arrow-drop-down-fill text-myblue text-base"></i>
+		<nav class="relative container mx-auto p-6 items-center">
+			<div class="flex justify-between items-center">
+				<div class="flex space-x-5 items-center">
+					<img src="./img/proton-logo-privacy-svgrepo-com.svg" alt="" class="h-auto">
+					<a href="#product" class="relative hover:text-myblue underline underline-offset-8">
+						Products
+					</a>
+					<div class="space-x-1 items-center text-center cursor-pointer hover:text-myblue">
+						<a href="#use">Use Cases</a>
+						<i class="ri-arrow-drop-down-fill text-myblue text-base"></i>
+					</div>
 				</div>
+
+				<div class=" space-x-5 items-center hidden md:flex">
+					<a href="#pricing" class="hover:text-myblue">Pricing</a>
+					<div class="space-x-1 items-center cursor-pointer hover:text-myblue">
+						<a href="">Resources</a>
+						<i class="ri-arrow-drop-down-fill text-myblue"></i>
+					</div>
+					<a href="" class="bg-myblue py-2 px-4 text-center text-white rounded-lg 
+					hover:bg-blue-500 active:scale-95 transition duration-300 ease-in" >
+						Get Started
+					</a>
+				</div>
+
+				<!--============= Hamburger Menu ===========-->
+				<button title="menu" type="button"
+					id="menu-btn" class="hamburger focus:outline-none cursor-pointer md:hidden">
+					<span class="hamburger-top"></span>
+					<span class="hamburger-middle"></span>
+					<span class="hamburger-bottom"></span>
+				</button>
 			</div>
 
-			<div class="flex space-x-5 items-center">
-				<a href="#pricing" class="hover:text-myblue">Pricing</a>
-				<div class="space-x-1 items-center cursor-pointer hover:text-myblue">
-					<a href="">Resources</a>
-					<i class="ri-arrow-drop-down-fill text-myblue"></i>
+			<!--=========== Mobile Menu ==============-->
+			<div class="md:hidden text-center">
+				<div id="menu" class="absolute flex-col inset-x-6 drop-shadow-md bg-white
+					py-6 px-6 font-bold space-y-6 items-center self-end sm:w-auto sm:self-center hidden z-10">
+					<a href="#" class="hover:text-myblue">Products</a>
+					<a href="#" class="hover:text-myblue">Use Cases</a>
+					<a href="#" class="hover:text-myblue">Pricing</a>
+					<a href="#" class="hover:text-myblue">Resources</a>
 				</div>
-				
-				<a href="" class="bg-myblue py-2 px-4 text-center text-white rounded-lg 
-					hover:bg-blue-500 active:scale-95 transition duration-300 ease-in" >
-					Get Started
-				</a>
 			</div>
 		</nav>
 
@@ -316,5 +335,7 @@
 				</div>
 			</div>
 		</footer>
+
+		<script src="./js/main.js"></script>
 	</body>
 </html>
