--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
 			<div class="md:hidden text-center">
 				<div id="menu" class="absolute flex-col inset-x-6 drop-shadow-md bg-white
 					py-6 px-6 font-bold space-y-6 items-center self-end sm:w-auto sm:self-center hidden z-10">
-					<a href="#" class="hover:text-myblue">Products</a>
-					<a href="#" class="hover:text-myblue">Use Cases</a>
-					<a href="#" class="hover:text-myblue">Pricing</a>
-					<a href="#" class="hover:text-myblue">Resources</a>
+					<a href="#" class="nav-link hover:text-myblue">Products</a>
+					<a href="#" class="nav-link hover:text-myblue">Use Cases</a>
+					<a href="#" class="nav-link hover:text-myblue">Pricing</a>
+					<a href="#" class="nav-link hover:text-myblue">Resources</a>
 				</div>
 			</div>
 		</nav>
 
 		<!---============= Main ============-->
-		<main id="main" class="relative">
-			<section class="flex flex-col mt-20 mx-10 justify-center items-center text-center space-y-5">
+		<main id="main" class="relative p-6 items-center">
+			<section class="flex flex-col justify-center items-center text-center space-y-8">
 				<h1 class="text-center text-3xl font-bold text-black">
 					Everything you need to grow your business
 				</h1>
@@ -68,14 +68,14 @@
 				 hover:bg-blue-500 active:scale-95 transition duration-300 ease-in">
 					Get Started With Protonn Today
 				</a>
-				<div class="flex space-x-5">
-					<div class="flex space-x-2 text-myblue">
+				<div class="flex flex-col-reverse space-x-5 sace-y-2 md:flex-row">
+					<div class="flex space-x-2 text-myblue text-center">
 						<i class="ri-bank-card-fill"></i>
 						<p>
 							No Credit Card Needed.
 						</p>
 					</div>
-					<div class="flex space-x-2 text-myblue">
+					<div class="flex space-x-2 text-myblue text-center">
 						<i class="ri-rocket-2-fill rotate-45"></i>
 						<p>
 							Free 3-months trial.
@@ -83,11 +83,11 @@
 					</div>
 				</div>
 
-				<div class=" py-14 space-y-5 items-center">
+				<div class="py-6 space-y-5 items-center">
 					<video controls  width="500" height="300" class="rounded-xl">
-					<source src="./video/Innova Digital Group - The Creative Ad Agency (Promo Video).mp4" type="video/mp4">
-					<source src="" type="">
-					Your browser does not support the video format
+					  <source src="./video/Innova Digital Group - The Creative Ad Agency (Promo Video).mp4" type="video/mp4">
+					  <source src="" type="">
+					  Your browser does not support the video format
 					</video>
 					<p class="text-center text-myblue font-bold">
 						See Protonn in Action
@@ -95,9 +95,10 @@
 				</div>
 			</section>
 
-			<section class="flex justify-between space-x-20 mt-20">
-				<div class="flex bg-yellow-100 rounded-r-2xl w-1/2 ml-2 justify-center items-center">
-					<img src="./img/iphone-removebg-preview.png" alt="" class="">
+			<section class="flex flex-col justify-between pt-20 items-center">
+				<div class="flex bg-yellow-100 w-full inset-x-0 
+          justify-center items-center pl-2 md:w-1/2">
+					<img src="./img/iphone-removebg-preview.png" alt="" class="py-20 h-auto">
 				</div>
 				
 				<div class="flex flex-col w-1/2 space-y-8 pr-14">
